--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -9,8 +9,33 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body>
-      <h1>To no dashboard caralho</h1>
+  <style type="text/css">
+    .jumbotron {background-color: white; margin-top: 10vh; min-height: 80vh;}
+    .nav-title {color: #dee9ff;}
+    .nav-btn {color: #dee9ff; border-color: #dee9ff;}
+    .nav-btn:hover {background-color: #474747; color: #dee9ff;}
+  </style>
+
+  <body style="background-color: #dee9ff;">
+
+    <div class="row">
+      <div class="col-sm-2" style="background-color: #262626; height: 100vh;">
+        <nav class="nav flex-column" style="margin-top:10vh">
+          <h3 class="nav-title d-flex justify-content-center">Controles</h3>
+          <hr class="my-2">
+          <a class="btn nav-btn" href="#">Lojas</a>
+          <a class="btn nav-btn" href="#">Produtos</a>
+          <a class="btn nav-btn" href="#">Administradores</a>
+        </nav>
+      </div>
+      <div class="col-sm-10" style="background-color:#dee9ff;">
+        <div class="container">
+          <div class="jumbotron">ola</div>
+        </div>
+      </div>
+    </div>
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
