[Feito] CRUD Loja

--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -7,33 +7,207 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <style type="text/css">
     .jumbotron {background-color: white; margin-top: 10vh; min-height: 80vh;}
-    .nav-title {color: #dee9ff;}
-    .nav-btn {color: #dee9ff; border-color: #dee9ff;}
-    .nav-btn:hover {background-color: #474747; color: #dee9ff;}
+    .material-icons {cursor: pointer;}
   </style>
 
   <body style="background-color: #dee9ff;">
-
-    <div class="row">
-      <div class="col-sm-2" style="background-color: #262626; height: 100vh;">
-        <nav class="nav flex-column" style="margin-top:10vh">
-          <h3 class="nav-title d-flex justify-content-center">Controles</h3>
-          <hr class="my-2">
-          <a class="btn nav-btn" href="#">Lojas</a>
-          <a class="btn nav-btn" href="#">Produtos</a>
-          <a class="btn nav-btn" href="#">Administradores</a>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+        </ul>
       </div>
-      <div class="col-sm-10" style="background-color:#dee9ff;">
-        <div class="container">
-          <div class="jumbotron">ola</div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12" style="background-color:#dee9ff;">
+          <div class="jumbotron d-flex justify-content-center">
+
+            <div id="display_lojas" class="table-responsive" style="display: inline;">
+              <table class="table table-hover table-bordered">
+                <caption>Lojas</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Foto</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Endereço</th>
+                        <th scope="col">Telefone</th>
+                        <th scope="col">Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody >
+                    {% for loja in lojas %}
+                    <tr>
+                      <td><img src="{{URL}}{{loja.image}}" style="width: 200px; height: 150px;"></td>
+                      <td>{{loja.nome}}</td>
+                      <td>{{loja.endereco}}</td>
+                      <td>{{loja.telefone}}</td>
+                      <td>
+                        <i onclick="abrir_modal_edit_loja({{loja}})" class="material-icons" data-toggle="tooltip" title="Editar" style="color: blue;">edit</i>
+                        <i class="material-icons" data-toggle="tooltip" title="Produtos" style="color: green;">add_shopping_cart</i>
+                        <i onclick="abrir_modal_delete_loja({{loja}})" class="material-icons" data-toggle="tooltip" title="Deletar" style="color: red;">delete</i>
+                      </td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+            </table>
+            <button class="btn btn-success" data-toggle="modal" data-target="#modal_create_loja">Adicionar</button>
+            </div>
+
+            <div id="loja_form" style="display:none;">
+
+            </div>
+
+            <div id="item_form" style="display:none;">
+              <h2 class="d-flex justify-content-center">Adicionar Item</h2>
+              <form action="{{URL}}/api/criar/item" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder='Nome do produto' name='produto_nome'>
+                </div>
+                <div class="form-group">
+                  <input type="file" placeholder='Imagem' name='image' accept="image/png, image/jpeg">
+                </div>
+  
+                <input type="submit" value="Criar" class="btn btn-success">
+              </form>
+            </div>
+
+            <div id="loja_item_form" style="display:none;">
+              <h2 class="d-flex justify-content-center" id="loja_item_nome"></h2>
+              <form action="{{URL}}/api/criar/loja_item" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                  <select name="produto_id" class="form-control" id="select_item"></select>
+                </div>
+                <div class="form-group">
+                  <input type="number" step="0.01" placeholder='Preço' name='preco'>
+                </div>
+                <input type="hidden" id="loja_id" name="loja_id">
+  
+                <input type="submit" value="Adicionar" class="btn btn-success">
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id="modal_create_loja">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Adicionar Loja</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form action="{{URL}}/api/criar/loja" method="POST" enctype="multipart/form-data">
+            <div class="modal-body">
+              {% csrf_token %}
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder='Nome da Loja' name='nome'>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder='Endereço' name='endereco'>
+              </div>
+              <div class="form-group">
+                <input type="number" class="form-control" placeholder='Telefone' name='telefone'>
+              </div>
+              <div class="form-group">
+                Foto:
+                <input type="file" placeholder='Imagem' name='image' accept="image/png, image/jpeg">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-default btn-success" type="submit" name="submit" value="Submit">Confirmar</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+          </form> 
+        </div>   
+      </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id="modal_edit_loja">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Editar Loja</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form action="{{URL}}/api/edit/loja" method="POST" enctype="multipart/form-data">
+            <div class="modal-body">
+              {% csrf_token %}
+              <div class="form-group">
+                <input id="modal_editar_loja_nome" type="text" class="form-control" placeholder='Nome da Loja' name='nome'>
+              </div>
+              <div class="form-group">
+                <input id="modal_editar_loja_endereco" type="text" class="form-control" placeholder='Endereço' name='endereco'>
+              </div>
+              <div class="form-group">
+                <input id="modal_editar_loja_telefone" type="number" class="form-control" placeholder='Telefone' name='telefone'>
+              </div>
+              <div class="form-group">
+                Foto:
+                <input type="file" placeholder='Imagem' name='image' accept="image/png, image/jpeg">
+              </div>
+              <input type="hidden" id="modal_editar_loja_id" name="loja_id">
+
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-default btn-success" type="submit" name="submit" value="Submit">Confirmar</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+          </form> 
+        </div>   
+      </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id="modal_delete_loja">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Deletar Loja</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form action="{{URL}}/api/delete/loja" method="POST">
+            <div class="modal-body">
+              {% csrf_token %}
+              <div class="form-group">
+                <input id="modal_delete_loja_nome" type="text" disabled class="form-control" placeholder='Nome da Loja' name='nome'>
+              </div>
+              <input type="hidden" id="modal_delete_loja_id" name="loja_id">
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-default btn-success" type="submit">Confirmar</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+          </form> 
+        </div>   
+      </div>
+    </div>
+      
 
     
     <!-- Optional JavaScript -->
@@ -41,5 +215,49 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
+  
+    <script>
+      $(document).ready(function(){
+        fetch(`{{URL}}/api/lojas`)
+          .then(response => response.json())
+          .then(response => {
+            div_lojas = document.getElementById('display_lojas')
+
+            document.getElementById('loja_item_nome').innerText = response[0].nome
+            document.getElementById('loja_id').setAttribute('value', response[0].id)
+            
+          })
+      })
+
+      function abrir_modal_delete_loja(loja){
+        $('#modal_delete_loja').modal('show')
+        document.getElementById('modal_delete_loja_nome').setAttribute('placeholder', loja.nome)
+        document.getElementById('modal_delete_loja_id').setAttribute('value', loja.id)
+      }
+
+      function abrir_modal_edit_loja(loja){
+        $('#modal_edit_loja').modal('show')
+        document.getElementById('modal_editar_loja_nome').setAttribute('value', loja.nome)
+        document.getElementById('modal_editar_loja_endereco').setAttribute('value', loja.endereco)
+        document.getElementById('modal_editar_loja_telefone').setAttribute('value', loja.telefone)
+        document.getElementById('modal_editar_loja_id').setAttribute('value', loja.id)
+        
+      }
+
+      function get_items(){
+        select = document.getElementById('select_item')
+        fetch(`{{URL}}/api/items`)
+          .then(response => response.json())
+          .then(response => {
+            for(i = 0; i < response.length; i++){
+              option = document.createElement('option')
+              option.setAttribute('value', response[i].id)
+              option.innerText = response[i].nome
+              select.appendChild(option)
+            }
+          })
+      }
+    </script>
   </body>
 </html>
