--- a/app/templates/app/dashboard_items_loja.html
+++ b/app/templates/app/dashboard_items_loja.html
@@ -44,10 +44,10 @@
           <div class="modal-body">
             {% csrf_token %}
             <div class="form-group">
-                <select name="produto_id" class="form-control" id="select_item"></select>
+                <select required name="produto_id" class="form-control" id="select_item"></select>
             </div>
             <div class="form-group">
-                <input type="number" class="form-control" step="0.01" placeholder='Preço' name='preco'>
+                <input required type="number" class="form-control" step="0.01" placeholder='Preço' name='preco'>
             </div>
             <input type="hidden" id="modal_adicionar_loja_id" name="loja_id" value="{{items_loja.loja.id}}">
           </div>
@@ -77,7 +77,7 @@
               <input type="text" id="modal_editar_item" disabled class="form-control" name='nome'>
           </div>
           <div class="form-group">
-              <input type="number" id="modal_editar_preco" class="form-control" step="0.01" placeholder='Preço' name='preco'>
+              <input required type="number" id="modal_editar_preco" class="form-control" step="0.01" placeholder='Preço' name='preco'>
           </div>
           <input type="hidden" id="modal_adicionar_loja_id" name="loja_id" value="{{items_loja.loja.id}}">
           <input type="hidden" id="modal_editar_item_loja" name="item_loja_id">
