--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -11,7 +11,7 @@
   </head>
   <body style="background-color: #dee9ff;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="/">Loja Bateria</a>
+      <a class="navbar-brand" href="/">Morais Baterias</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
